<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">hello</string>
    <string name="app_name">Andro Panel</string>
    <string name="sxnet_server_settings">SXnet Server Settings</string>
    <string name="ip_address_of_server">Server IP Address</string>
    <string name="general_settings">Settings</string>
    <string name="port">Server Port</string>
    <string name="port_sh">Server Port</string>
    <string name="panel">Panel</string>
    <string name="settings">Settings</string>
    <string name="edit_settings">Panel Editing</string>
    <string name="about">Info</string>
    <string name="reconnect">Re-Connect</string>
    <string name="cancel">Cancel</string>
    <string name="sxnet_loco">Loco Address Setting</string>
    <string name="loco_address">Loco Address (1..103) </string>
    <string name="showSXaddresses">display SX addresses</string>
    <string name="showXYvalues">display raster values [x,y] </string>
    <string name="enableAutoIP">Automatically configure IP</string>
    <string name="enableZoom">Enable Panel Zoom</string>
    <string name="enableEdit">Enable SX Edit Mode</string>
    <string name="enableDemo">Enable DEMO Mode (local echo)</string>
    <string name="quit">Exit Program.</string>
    <string name="edit">Edit On/Off</string>
    <string name="sel_style">Anzeige Stil wählen</string>
    <string name="sel_style_default">US</string>
    <string name="sx_adresse">SX-Adr.</string>
    <string name="_sx_bit">" SX-Bit"</string>
    <string name="sel_loco_prompt">Loco Auswahl</string>
    <string name="test_array">Choose a planet</string>
    <string name="files_settings">Config Files</string>
    <string name="center_panel">Center Panel</string>
    <string name="select_panel">Display Panel</string>
    <string name="select_throttle">Display Throttle</string>
    <string name="aboutString">"AndroPanel is free software - you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version. Andropanel is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  For details about the GNU General Public License see http://www.gnu.org/licenses "</string>
    <string name="copyrightString">Copyright 2012-2016 - Michael Blank - Sonja Schittenhelm - michael@opensx.net</string>
    <string name="moreInfoString">more info on http://www.oscale.net/andropanel</string>
    <string name="andropanelTitleString">AndroPanel</string>
    <string name="versionUnknown">version x</string>
    <string name="unknown">x</string>
    <string name="helpString">Quick Start: the panel is coded as xml in the file "panel-demo.xml" (only the tracks and sensors have to be coded, turnouts are calculated automatically the first time tracks are read).\nThe Locos are coded in the file "locos-demo.xml" (directory /sdcard/andropanel/). Copy these file and change them for your layout, then select your new files in the settings. Loco Filenames = "loco...", Panel Filenames = "panel..." to enable the settings program to find them.</string>
    <string name="inverted">"invert"</string>
    <string name="yes_inverted">Y</string>
    <string name="no_inverted">Y</string>
    <string name="add_loco">Add new Loco</string>
    <string name="remove_loco">Remove Loco</string>
    <string name="edit_loco">Edit Loco</string>
    <string name="are_you_sure_this_will_overwrite_existing_current_data">Are you sure (this will overwrite existing current data)?</string>
    <string name="are_you_sure_this_will_overwrite_any_existing_backup_data">Are you sure (this will overwrite any existing backup data)?</string>
    <string name="external_storage_is_not_available_unable_to_export_data">External storage is not available, unable to export data.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="different_icon">anderes Lok-Icon</string>
    <string name="add_loco_to_xml_file">add_loco_to_xml_file</string>
    <string name="add_loco_title">add_loco_title</string>
    <string name="name">Loco Name</string>
    <string name="back">back</string>
    <string name="address">Loco Address</string>
    <string name="store_changes">Store changes?</string>
    <string name="add_new_loco">Add new Loco?</string>
    <string name="selectloco">select Loco</string>
    <string name="no_locos">No Locos</string>
    <string name="locodb">Loco DB</string>
    <string name="error_enter_address_first">ERROR: please enter loco ADDRESS first!</string>
    <string name="error_enter_name_first">ERROR: please enter NAME first!</string>

</resources>
